# vibe-coding-engineered

./: .gitattributes  .gitignore  FOUNDER_TEMPLATE.md  README.md
mvpflow-ai/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  alembic.ini  docker-compose.yml  my_notes.txt  pyproject.toml  requirements.txt
mvpflow-ai/alembic/: env.py
mvpflow-ai/alembic/versions/: 49c38e5b8f53_initial_schema.py
mvpflow-ai/app/: __init__.py  automation.py  cli.py  config.py  constants.py  database.py  main.py  middleware.py  models.py  observability.py  security.py
mvpflow-ai/app/core/: architecture.py  evaluation.py  jira_ticket_generator.py  landing.py  mvp_scope.py  requirements_extractor.py  research.py  solutions.py  summary.py  tickets.py  workflow.py
mvpflow-ai/app/integrations/: __init__.py  github.py  (+1 more)
mvpflow-ai/docs/: CODEMAP.md  generated_demo_summary.md  jira_backlog_sample.md  mvp_plan.md  problem_statement.md  research.md
mvpflow-ai/eval/: README.md  golden_cases.json  run_eval.py
mvpflow-ai/examples/: restaurant_founder_notes.txt  sample_landing.html  sample_workflow_output.json
mvpflow-ai/prompts/: architecture.md  evaluation.md  final_summary.md  jira_ticket.md  mvp_scope.md  requirement_extraction.md
mvpflow-ai/scripts/: build_pdf.py  build_pdf.sh  setup-production.sh
mvpflow-ai/tests/: conftest.py  test_api.py  test_cli_demo_warning.py  test_database.py  test_jira.py  test_landing.py  test_llm.py  test_security.py  test_tickets.py  test_workflow.py
mvpflow-ai/tickets/: MVP-002.md
(+10 files in other folders)
