[project]
name = "mvpflow-ai"
version = "1.0.0"
description = "AI-assisted MVP execution workflow for startup founders - Production Ready."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",

    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "httpx>=0.25.0",
    "anthropic>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.7.0",
]
prod = [
    "gunicorn>=21.0.0",
    "psycopg2-binary>=2.9.0",
]
monitoring = [
    "datadog>=0.46.0",
    "sentry-sdk>=1.40.0",
]
docs = [          # for scripts/build_pdf.py (regenerate the workshop PDF)
    "markdown>=3.5",
    "weasyprint>=60",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bandit]
# Static security scan (advisory in CI). Scan app/ only; skip assert checks.
exclude_dirs = ["tests"]
skips = ["B101"]
